src/styles/App.css
body {
  font-family: 'Arial', sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: #FEFEFE; /* Light background color */
}

h1 {
  color: #040404; /* Dark text color */
}

a {
  color: #15DB63; /* Primary accent color */
  text-decoration: none;
  margin: 0 10px;
}

.container {
  margin: 0 auto;
  padding: 20px;
}

.form-container {
  background-color: #FEFEFE; /* Light background color */
  padding: 20px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
}

input[type="text"], input[type="email"], input[type="password"] {
  width: 95%;
  padding: 10px;
  margin: 10px auto;
  border: 1px solid #ddd;
  border-radius: 4px;
  color: #040404; /* Dark text color */
  display: block;
}

button, .black-button {
  width: 97.5%;
  padding: 10px;
  background-color: #040404; /* Dark background */
  border: none;
  color: #FEFEFE; /* Light text */
  border-radius: 4px;
  cursor: pointer;
  margin: 10px auto;
  text-align: center;
  display: block;
}

button:hover, .black-button:hover {
  background-color: #333333; /* Slightly lighter black */
}

p {
  color: #666;
}

.link {
  text-align: center;
  margin-top: 20px;
}

.home {
  text-align: center;
  color: #040404; /* Dark text color */
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.subtitle {
  color: #828282;
}

.home h1 {
  color: #040404; /* Dark text color */
}

.home .link a {
  background-color: #040404; /* Dark background */
  color: #FEFEFE; /* Light text */
  padding: 10px 20px;
  border-radius: 4px;
  margin: 0 10px;
  display: inline-block;
}

.home .link a:hover {
  background-color: #333333; /* Slightly lighter black */
}

.main-logo {
  width: 80vw;
  height: auto;
  margin-bottom: 20px; /* Add margin below the logo */
}

.input-container {
  position: relative;
}

.regexError {
  color: red;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

.validation-message {
  color: red;
  margin-left: 10px;
}

.forgot-password {
  color: #040404; /* Black text color */
  text-align: right;
  cursor: pointer;
  margin-top: 5px;
  font-size: 14px;
  display: block; /* Ensure it takes up the full width */
  width: 50%; /* Match the input width */
  margin-left: auto; /* Align to the right */
}

